--- a/SliderLight/Base.lproj/Main.storyboard
+++ b/SliderLight/Base.lproj/Main.storyboard
@@ -12,75 +12,123 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SliderLight" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Z28-ld-4zA">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37I-WE-xVU">
-                                <rect key="frame" x="75" y="103" width="280" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZYM-sy-IhW">
+                                <rect key="frame" x="36.666666666666657" y="113" width="357" height="138"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="ehY-IM-x1U"/>
-                                    <constraint firstAttribute="width" constant="280" id="vmg-2N-deK"/>
+                                    <constraint firstAttribute="width" constant="357" id="sq4-WL-4bc"/>
+                                    <constraint firstAttribute="height" constant="138" id="uvh-JP-SPZ"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="JAd-OT-FnF">
-                                <rect key="frame" x="235" y="352" width="179" height="170"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="3Fg-Wo-bc6">
+                                <rect key="frame" x="278" y="407" width="134" height="184"/>
                                 <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="q7L-Ag-pE9">
-                                        <rect key="frame" x="-2" y="0.0" width="183" height="31"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="PRr-sb-deo">
+                                        <rect key="frame" x="-2" y="0.0" width="138" height="31"/>
+                                        <connections>
+                                            <action selector="rSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="rbl-Cn-yh0"/>
+                                        </connections>
                                     </slider>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="keS-tF-AEu">
-                                        <rect key="frame" x="-2" y="70" width="183" height="31"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="eYO-9w-do4">
+                                        <rect key="frame" x="-2" y="77" width="138" height="31"/>
+                                        <connections>
+                                            <action selector="gSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="78o-G6-uxp"/>
+                                        </connections>
                                     </slider>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="jf0-42-Gjc">
-                                        <rect key="frame" x="-2" y="140" width="183" height="31"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="t7C-GT-uGP">
+                                        <rect key="frame" x="-2" y="154" width="138" height="31"/>
+                                        <connections>
+                                            <action selector="bSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Uyn-m1-bga"/>
+                                        </connections>
                                     </slider>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="Lyx-Ej-8pn"/>
-                                    <constraint firstAttribute="width" constant="179" id="O72-0X-W00"/>
+                                    <constraint firstAttribute="height" constant="184" id="Bi6-eu-XQF"/>
+                                    <constraint firstAttribute="width" constant="134" id="XUI-Q7-O7a"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="Hsa-jS-JV1">
-                                <rect key="frame" x="16.000000000000004" y="352" width="60.333333333333343" height="169"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="52" translatesAutoresizingMaskIntoConstraints="NO" id="dYF-w0-jNm">
+                                <rect key="frame" x="20.000000000000004" y="411" width="53.333333333333343" height="176"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pN-6o-WB9">
-                                        <rect key="frame" x="0.0" y="0.0" width="39.333333333333336" height="27.666666666666668"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25e-xk-Bnq">
+                                        <rect key="frame" x="0.0" y="0.0" width="53.333333333333336" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyE-3g-3pl">
-                                        <rect key="frame" x="0.0" y="70.666666666666686" width="60.333333333333336" height="27.666666666666671"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxi-ke-ccR">
+                                        <rect key="frame" x="0.0" y="76" width="53.333333333333336" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bzx-9i-THg">
-                                        <rect key="frame" x="0.0" y="141.33333333333331" width="44" height="27.666666666666657"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dua-JB-T4D">
+                                        <rect key="frame" x="0.0" y="152" width="53.333333333333336" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="169" id="VaZ-Zo-62q"/>
-                                    <constraint firstAttribute="width" constant="60.329999999999998" id="fCj-GN-FY4"/>
+                                    <constraint firstAttribute="height" constant="176" id="Wjb-jS-D4j"/>
+                                    <constraint firstAttribute="width" constant="53.329999999999998" id="eTX-ix-6dO"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="v6x-gX-P0V">
+                                <rect key="frame" x="155" y="416" width="41.333333333333343" height="171"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3u-69-Zg4">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fr4-4C-3pP">
+                                        <rect key="frame" x="0.0" y="75.333333333333314" width="41.333333333333336" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KRc-LL-Ru6">
+                                        <rect key="frame" x="0.0" y="150.66666666666663" width="41.333333333333336" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="41.329999999999998" id="1zi-0K-wDh"/>
+                                    <constraint firstAttribute="height" constant="171" id="cgn-Af-OKc"/>
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="uBy-JA-SiC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="37I-WE-xVU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="Do2-At-H07"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JAd-OT-FnF" secondAttribute="trailing" constant="16" id="S2P-Sg-M3B"/>
-                            <constraint firstItem="JAd-OT-FnF" firstAttribute="top" secondItem="37I-WE-xVU" secondAttribute="bottom" constant="121" id="SvS-m3-GgB"/>
-                            <constraint firstItem="Hsa-jS-JV1" firstAttribute="top" secondItem="37I-WE-xVU" secondAttribute="bottom" constant="121" id="jDP-ew-QEi"/>
-                            <constraint firstItem="Hsa-jS-JV1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="jf4-oF-PDH"/>
-                            <constraint firstItem="37I-WE-xVU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lpH-g5-myw"/>
+                            <constraint firstItem="dYF-w0-jNm" firstAttribute="top" secondItem="ZYM-sy-IhW" secondAttribute="bottom" constant="160" id="HH8-iR-aGA"/>
+                            <constraint firstItem="dYF-w0-jNm" firstAttribute="leading" secondItem="uBy-JA-SiC" secondAttribute="leading" constant="20" id="HvA-JU-z5R"/>
+                            <constraint firstItem="uBy-JA-SiC" firstAttribute="trailing" secondItem="3Fg-Wo-bc6" secondAttribute="trailing" constant="18" id="IgO-IS-c3O"/>
+                            <constraint firstItem="3Fg-Wo-bc6" firstAttribute="top" secondItem="ZYM-sy-IhW" secondAttribute="bottom" constant="156" id="NsF-Gs-fU1"/>
+                            <constraint firstItem="ZYM-sy-IhW" firstAttribute="top" secondItem="uBy-JA-SiC" secondAttribute="top" constant="54" id="PhC-Fs-Nw1"/>
+                            <constraint firstItem="3Fg-Wo-bc6" firstAttribute="leading" secondItem="v6x-gX-P0V" secondAttribute="trailing" constant="81.670000000000002" id="Tly-5r-9IS"/>
+                            <constraint firstItem="v6x-gX-P0V" firstAttribute="leading" secondItem="dYF-w0-jNm" secondAttribute="trailing" constant="81.670000000000002" id="iGq-QO-EQd"/>
+                            <constraint firstItem="ZYM-sy-IhW" firstAttribute="centerX" secondItem="Z28-ld-4zA" secondAttribute="centerX" id="ieN-o5-lxn"/>
+                            <constraint firstItem="v6x-gX-P0V" firstAttribute="top" secondItem="ZYM-sy-IhW" secondAttribute="bottom" constant="165" id="yee-55-e9J"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bSlider" destination="t7C-GT-uGP" id="fgw-Wh-kA9"/>
+                        <outlet property="colorView" destination="ZYM-sy-IhW" id="UNf-2l-nFw"/>
+                        <outlet property="gSlider" destination="eYO-9w-do4" id="L2y-9d-gl3"/>
+                        <outlet property="numberB" destination="KRc-LL-Ru6" id="bP9-sx-e6P"/>
+                        <outlet property="numberG" destination="fr4-4C-3pP" id="6kr-58-Wmd"/>
+                        <outlet property="numberR" destination="Z3u-69-Zg4" id="me2-GT-o9H"/>
+                        <outlet property="rSlider" destination="PRr-sb-deo" id="Yzc-8C-Yqe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
